--- a/EmpAppADO/Views/Shared/_Layout.cshtml
+++ b/EmpAppADO/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Emp" asp-action="List">Employee List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="EmpView" asp-action="List">Employee List</a>
                         </li>
                     </ul>
                 </div>
