--- a/EmpAppADO/Views/EmpView/List.cshtml
+++ b/EmpAppADO/Views/EmpView/List.cshtml
@@ -1,4 +1,8 @@
-﻿<div class="card card-primary card-outline">
+﻿@inject EmpAppADO.Services.ITokenService TokenService
+
+
+
+<div class="card card-primary card-outline">
     <div class="card-header">
         <h3 class="card-title">EmployeeList</h3>
     </div>
@@ -14,9 +18,7 @@
 
 
 @{
-    var token = Context.Session.GetString("JWToken");
-    bool isAdmin = EmpAppADO.HttpServiceHelper.JwtHelper.IsAdmin(token);
-   
+    var isAdmin = await TokenService.IsUserAdminAsync();
 }
 
 <script>
