--- a/EmpAppADO/Views/Shared/_Layout.cshtml
+++ b/EmpAppADO/Views/Shared/_Layout.cshtml
@@ -24,12 +24,24 @@
             <div class="container-fluid">
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item me-3">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Dashboard" title="Home">
+                                <i class="fas fa-home"></i>
+                            </a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="EmpView" asp-action="List">Employee List</a>
                         </li>
                     </ul>
 
+
                     <ul class="navbar-nav ms-auto">
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item me-3 align-self-center">
+                                <span class="text-dark">@User.Identity.Name</span>
+                            </li>
+                        }
                         <li class="nav-item">
                             <form asp-controller="Account" asp-action="Logout" method="post" class="form-inline">
                                 @Html.AntiForgeryToken()
@@ -39,6 +51,7 @@
                             </form>
                         </li>
                     </ul>
+
 
                 </div>
             </div>
